--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "nodeapp",
   "version": "0.0.0",
   "private": true,
+  "type": "commonjs",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,5 +17,10 @@
     "mysql2": "^1.6.5",
     "sequelize": "^5.9.4",
     "sequelize-cli": "^5.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-plugin-node": "^9.1.0",
+    "nodemon": "^1.19.1"
   }
 }
