--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
