--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=8.10.0"
   },
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "npx nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
